[package]
name = "rsinetd"
version = "0.1.0"
authors = ["劉安 <liuan@sgcc.com.cn>"]
edition = "2018"
license = "GPL-3.0"
description = "A replacement of rinetd. Because async-std use epoll rather than select, RsInetd may handle higher throughput than rinetd."
documentation = "https://github.com/SuperHacker-liuan/rsinetd"
homepage = "https://github.com/SuperHacker-liuan/rsinetd"
repository = "https://github.com/SuperHacker-liuan/rsinetd"
categories = [
    "command-line-utilities",
    "network-programming",
    "asynchronous",
]
keywords = ["rinetd", "proxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.5"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 20
panic = 'abort'
overflow-checks = false
